Update work section, removed GSAP.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Design - UX, UI, IxD - Cameron Skene</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="I’m passionate about design and technology and exploring the role they play in communication. I have over a decade of design and development experience and love working with people who 'get' good design and the difference is makes to the success of a product. I love learning new skills and I’m always up for a challenge. I like to be up to date with our industries best practices, technologies, and trends.">
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,500' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -20,13 +20,14 @@
                     <li><a class="icon-github" href="http://github.com/camskene"><span>Github</span></a></li>
                     <li><a class="icon-mail" href="mailto:camskene@gmail.com"><span>Contact</span></a></li>
                 </ul>
-                <p id="shiny">Design</p>
                 <h1>Cameron Skene</h1>
+                <p id="shiny">User Interface Design &amp; Front-end Engineering.</p>
             </div>
         </header>
 
         <blockquote>
             <p>"The concerns of the information architect, interface designer, and interaction designer all overlap significantly. <span>Combined, all three disciplines are charged with creating the user experience."</span></p>
+            <cite>Cameron Skene</cite>
             <!--
             <p>"The broader one’s understanding of the human experience, the better design we will have."</p>
             <cite>– Steve Jobs</cite> -->
@@ -35,46 +36,151 @@
         <section id="work">
             <div class="content">
                 <h2 class="section-title">Work</h2>
-                <ul class="grid work-list">
+                <ul class="work-list">
                     <li>
                         <figure>
-                            <a href="img/yahoo-weather.jpg" class="btn"><img src="img/yahoo-weather-th.jpg" alt=""></a>
+                            <img src="img/yahoo-weather-th.jpg" alt="">
                         </figure>
+
+                        <div class="panel">
+                            <h3 class="brand">Yahoo!</h3>
+                            <div class="info">
+                                <h4>My Role</h4>
+                                <p>Design</p>
+
+                                <h4>Industry</h4>
+                                <p>Online</p>
+                            </div>
+                            <div class="btns">
+                                <a href="img/yahoo-weather.jpg" class="btn">View Design</a>
+                            </div>
+                        </div>
                     </li>
                     <li>
                         <figure>
-                            <a href="img/tnp-home.jpg" class="btn"><img src="img/tnp-home-th.jpg" alt=""></a>
+                            <img src="img/tnp-home-th.jpg" alt="">
                         </figure>
+                        <div class="panel">
+                            <h3 class="brand">The New Potato (TNP)</h3>
+                            <div class="info">
+                                <h4>My Role</h4>
+                                <p>Design &amp; Development</p>
+
+                                <h4>Industry</h4>
+                                <p>Lifestyle, Food</p>
+                            </div>
+                            <div class="btns">
+                                <a href="img/tnp-home.jpg" class="btn">View Design</a>
+                            </div>
+                        </div>
                     </li>
                     <li>
                         <figure>
-                            <a class="btn" href="img/silverseacruises-destinations.jpg"><img src="img/silverseacruises-home-th.jpg" alt=""></a>
+                            <img src="img/silverseacruises-home-th.jpg" alt="">
                         </figure>
+                        <div class="panel">
+                            <h3 class="brand">Cruise Norway</h3>
+                            <div class="info">
+                                <h4>My Role</h4>
+                                <p>Design &amp; Front-end Development</p>
+
+                                <h4>Industry</h4>
+                                <p>Travel, Luxury</p>
+                            </div>
+                            <div class="btns">
+                                <a href="img/silverseacruises-destinations.jpg" class="btn">View Design</a>
+                            </div>
+                        </div>
                     </li>
                     <li>
                         <figure>
-                            <a class="btn" href="img/ghostlight-home.jpg"><img src="img/ghostlight-home-th.jpg" alt=""></a>
+                            <img src="img/ghostlight-home-th.jpg" alt="">
                         </figure>
+                        <div class="panel">
+                            <h3 class="brand">Ghostlight Records</h3>
+                            <div class="info">
+                                <h4>My Role</h4>
+                                <p>Home Page Design</p>
+
+                                <h4>Industry</h4>
+                                <p>Music, Ecommerce</p>
+                            </div>
+                            <div class="btns">
+                                <a href="img/ghostlight-home.jpg" class="btn">View Design</a>
+                            </div>
+                        </div>
                     </li>
                     <li>
                         <figure>
-                            <a class="btn" href="img/pippin-home.jpg"><img src="img/pippin-home-th.jpg" alt=""></a>
+                            <img src="img/pippin-home-th.jpg" alt="">
                         </figure>
+                        <div class="panel">
+                            <h3 class="brand">Pippin the Musical</h3>
+                            <div class="info">
+                                <h4>My Role</h4>
+                                <p>Design &amp; Development</p>
+
+                                <h4>Industry</h4>
+                                <p>Arts, Entertainment</p>
+                            </div>
+                            <div class="btns">
+                                <a href="img/pippin-home.jpg" class="btn">View Design</a>
+                            </div>
+                        </div>
                     </li>
                     <li>
                         <figure>
-                            <a class="btn" href="img/kings-speech-home.jpg"><img src="img/kings-speech-home-th.jpg" alt=""></a>
+                            <img src="img/kings-speech-home-th.jpg" alt="">
                         </figure>
+                        <div class="panel">
+                            <h3 class="brand">The Kings Speech</h3>
+                            <div class="info">
+                                <h4>My Role</h4>
+                                <p>Design &amp; Development</p>
+
+                                <h4>Industry</h4>
+                                <p>Arts, Entertainment</p>
+                            </div>
+                            <div class="btns">
+                                <a href="img/kings-speech-home.jpg" class="btn">View Design</a>
+                            </div>
+                        </div>
                     </li>
                     <li>
                         <figure>
-                            <a class="btn" href="img/amp-lg.png"><img src="img/amp-th.jpg" alt=""></a>
+                            <img src="img/amp-th.jpg" alt="">
                         </figure>
+                        <div class="panel">
+                            <h3 class="brand">Tuts+</h3>
+                            <div class="info">
+                                <h4>My Role</h4>
+                                <p>User Interface Tutorial</p>
+
+                                <h4>Industry</h4>
+                                <p>Education</p>
+                            </div>
+                            <div class="btns">
+                                <a href="img/amp-lg.png" class="btn">View Design</a>
+                            </div>
+                        </div>
                     </li>
                     <li>
                         <figure>
-                            <a class="btn" href="img/twtr-app.jpg"><img src="img/twtr-app-th.jpg" alt=""></a>
+                            <img src="img/twtr-app-th.jpg" alt="">
                         </figure>
+                        <div class="panel">
+                            <h3 class="brand">Tuts+</h3>
+                            <div class="info">
+                                <h4>My Role</h4>
+                                <p>User Interface Tutorial</p>
+
+                                <h4>Industry</h4>
+                                <p>Education</p>
+                            </div>
+                            <div class="btns">
+                                <a href="img/twtr-app.jpg" class="btn">View Design</a>
+                            </div>
+                        </div>
                     </li>
 
                 </ul>
@@ -86,7 +192,7 @@
                 <h2 class="section-title">About me</h2>
                 <ul class="grid">
                     <li class="icon-cycle">In-sync with our industries best practices, technologies, and trends.</li>
-                    <li class="icon-code">Over 10 years experience coding with HTML, CSS, and JavaScript.</li>
+                    <li class="icon-code">Over 10 years experience with HTML, CSS, and JavaScript.</li>
                     <li class="icon-ok">Proven track-record for shipping rock-solid, high quality experiences.</li>
                     <li class="icon-smile">Excited by design and technology and the roles they play in communication.</li>
                     <li class="icon-superscript">Adept at finding solutions. From concept to code, an original and practical thinker.</li>
