--- a/index.html
+++ b/index.html
@@ -3,40 +3,107 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Design - UX, UI, IxD - Cameron Skene</title>
+    <title>UI Design &amp; Devlopment - Cam Skene</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="I’m passionate about design and technology and exploring the role they play in communication. I have over a decade of design and development experience and love working with people who 'get' good design and the difference is makes to the success of a product. I love learning new skills and I’m always up for a challenge. I like to be up to date with our industries best practices, technologies, and trends.">
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,500' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="style.css">
-
+    <meta name="description" content="I’m passionate about design and technology and the roles they play in communication. I have over 15 years of design and development experience and love working with people who 'get' good design and the difference it makes to the success of a product. I love learning new skills and I’m always up for a challenge. I like to be up to date with our industries best practices, technologies, and trends.">
+    <link rel="stylesheet" href="dist/styles/main.min.css">
 </head>
 <body>
     <div id="container">
-        <header id="site-header">
+        <header id="header">
             <div class="content">
                 <ul class="links">
                     <li><a class="icon-behance" href="http://behance.com/camskene"><span>Behance</span></a></li>
                     <li><a class="icon-twitter" href="http://twitter.com/camskene"><span>Twitter</span></a></li>
-                    <li><a class="icon-github" href="http://github.com/camskene"><span>Github</span></a></li>
+                    <li><a class="icon-github" href="http://github.com/camskene?tab=repositories"><span>Github</span></a></li>
                     <li><a class="icon-mail" href="mailto:camskene@gmail.com"><span>Contact</span></a></li>
                 </ul>
-                <h1>Cameron Skene</h1>
-                <p id="shiny">User Interface Design &amp; Front-end Engineering.</p>
+                <h1>Cam Skene</h1>
+                <p>User Interface Design &amp; Development</p>
             </div>
         </header>
-
-        <blockquote>
-            <p>"The concerns of the information architect, interface designer, and interaction designer all overlap significantly. <span>Combined, all three disciplines are charged with creating the user experience."</span></p>
-            <cite>Cameron Skene</cite>
-            <!--
-            <p>"The broader one’s understanding of the human experience, the better design we will have."</p>
-            <cite>– Steve Jobs</cite> -->
-        </blockquote>
 
         <section id="work">
             <div class="content">
                 <h2 class="section-title">Work</h2>
                 <ul class="work-list">
+                    <li>
+                        <figure>
+                            <img src="img/shuddle-th.jpg" alt="">
+                        </figure>
+
+                        <div class="panel">
+                            <h3 class="brand">Shuddle Inc.</h3>
+                            <div class="info">
+                                <h4>What I Did</h4>
+                                <p>Front-end Engineer</p>
+
+                                <h4>Things I Used</h4>
+                                <p>Middleman, Compass, Sass, Git</p>
+                            </div>
+                            <div class="btns">
+                                <a href="http://shuddle.us/" class="btn">Visit Site</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="img/about-th.jpg" alt="">
+                        </figure>
+
+                        <div class="panel">
+                            <h3 class="brand">About</h3>
+                            <div class="info">
+                                <h4>What I Did</h4>
+                                <p>Front-end Engineer (1x7)</p>
+
+                                <h4>Things I Used</h4>
+                                <p>XML, Freemarker, CSS, JS, Git</p>
+                            </div>
+                            <div class="btns">
+                                <a href="http://about.com/food" class="btn">Visit Site</a>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <figure>
+                            <img src="img/staybay-th.jpg" alt="">
+                        </figure>
+
+                        <div class="panel">
+                            <h3 class="brand">StayBay</h3>
+                            <div class="info">
+                                <h4>What I Did</h4>
+                                <p>Responsive Design/Front-end Engineer (1x2)</p>
+
+                                <h4>Things I Used</h4>
+                                <p>HTML, CSS, JS, RoR, Git, Heroku</p>
+                            </div>
+                            <div class="btns">
+                                <a href="https://www.staybay.com/" class="btn">Visit Site</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="img/speedlist-th.jpg" alt="">
+                        </figure>
+
+                        <div class="panel">
+                            <h3 class="brand">Speedlist</h3>
+                            <div class="info">
+                                <h4>What I Did</h4>
+                                <p>Front-end Engineer (1x2)</p>
+
+                                <h4>Industry</h4>
+                                <p>HTML, CSS, JS, RoR, GSAP, Git, Heroku</p>
+                            </div>
+                            <div class="btns">
+                                <a href="https://www.speedlist.com/" class="btn">Visit Site</a>
+                            </div>
+                        </div>
+                    </li>
                     <li>
                         <figure>
                             <img src="img/yahoo-weather-th.jpg" alt="">
@@ -45,14 +112,32 @@
                         <div class="panel">
                             <h3 class="brand">Yahoo!</h3>
                             <div class="info">
-                                <h4>My Role</h4>
+                                <h4>What I Did</h4>
                                 <p>Design</p>
 
-                                <h4>Industry</h4>
-                                <p>Online</p>
+                                <h4>Things I Used</h4>
+                                <p>Photoshop, Illustrator</p>
                             </div>
                             <div class="btns">
                                 <a href="img/yahoo-weather.jpg" class="btn">View Design</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="img/workhorse-th.jpg" alt="">
+                        </figure>
+
+                        <div class="panel">
+                            <h3 class="brand">Workhorse</h3>
+                            <div class="info">
+                                <h4>What I Did</h4>
+                                <p>Responsive Design/Front-end Engineer</p>
+                                <h4>Things I Used</h4>
+                                <p>HTML, CSS, JS, RoR, GSAP, Git, Heroku</p>
+                            </div>
+                            <div class="btns">
+                                <a href="http://workhorse-stage.herokuapp.com/" class="btn">Visit Site</a>
                             </div>
                         </div>
                     </li>
@@ -63,11 +148,11 @@
                         <div class="panel">
                             <h3 class="brand">The New Potato (TNP)</h3>
                             <div class="info">
-                                <h4>My Role</h4>
+                                <h4>What I Did</h4>
                                 <p>Design &amp; Development</p>
 
-                                <h4>Industry</h4>
-                                <p>Lifestyle, Food</p>
+                                <h4>Things I Used</h4>
+                                <p>HTML, CSS, JS, PHP, WordPress</p>
                             </div>
                             <div class="btns">
                                 <a href="img/tnp-home.jpg" class="btn">View Design</a>
@@ -81,11 +166,11 @@
                         <div class="panel">
                             <h3 class="brand">Cruise Norway</h3>
                             <div class="info">
-                                <h4>My Role</h4>
+                                <h4>What I Did</h4>
                                 <p>Design &amp; Front-end Development</p>
 
-                                <h4>Industry</h4>
-                                <p>Travel, Luxury</p>
+                                <h4>Things I Used</h4>
+                                <p>Photoshop, Illustrator</p>
                             </div>
                             <div class="btns">
                                 <a href="img/silverseacruises-destinations.jpg" class="btn">View Design</a>
@@ -99,11 +184,11 @@
                         <div class="panel">
                             <h3 class="brand">Ghostlight Records</h3>
                             <div class="info">
-                                <h4>My Role</h4>
+                                <h4>What I Did</h4>
                                 <p>Home Page Design</p>
 
-                                <h4>Industry</h4>
-                                <p>Music, Ecommerce</p>
+                                <h4>What I Used</h4>
+                                <p>Pencil, Photoshop</p>
                             </div>
                             <div class="btns">
                                 <a href="img/ghostlight-home.jpg" class="btn">View Design</a>
@@ -117,47 +202,47 @@
                         <div class="panel">
                             <h3 class="brand">Pippin the Musical</h3>
                             <div class="info">
-                                <h4>My Role</h4>
+                                <h4>What I Did</h4>
                                 <p>Design &amp; Development</p>
 
-                                <h4>Industry</h4>
-                                <p>Arts, Entertainment</p>
+                                <h4>Things I Used</h4>
+                                <p>HTML, CSS, JS, PHP, Git</p>
                             </div>
                             <div class="btns">
                                 <a href="img/pippin-home.jpg" class="btn">View Design</a>
                             </div>
                         </div>
                     </li>
-                    <li>
+                    <!-- <li>
                         <figure>
                             <img src="img/kings-speech-home-th.jpg" alt="">
                         </figure>
                         <div class="panel">
                             <h3 class="brand">The Kings Speech</h3>
                             <div class="info">
-                                <h4>My Role</h4>
-                                <p>Design &amp; Development</p>
+                                <h4>What I Did</h4>
+                                <p>Design &amp; Development (24hr turnaround)</p>
 
-                                <h4>Industry</h4>
-                                <p>Arts, Entertainment</p>
+                                <h4>Things I Used</h4>
+                                <p>Photoshop</p>
                             </div>
                             <div class="btns">
                                 <a href="img/kings-speech-home.jpg" class="btn">View Design</a>
                             </div>
                         </div>
-                    </li>
+                    </li> -->
                     <li>
                         <figure>
                             <img src="img/amp-th.jpg" alt="">
                         </figure>
                         <div class="panel">
-                            <h3 class="brand">Tuts+</h3>
+                            <h3 class="brand">Stereo Amplifier</h3>
                             <div class="info">
-                                <h4>My Role</h4>
-                                <p>User Interface Tutorial</p>
+                                <h4>What I Did</h4>
+                                <p>Skeuomorphism Tutorial</p>
 
-                                <h4>Industry</h4>
-                                <p>Education</p>
+                                <h4>Things I Used</h4>
+                                <p>Photoshop</p>
                             </div>
                             <div class="btns">
                                 <a href="img/amp-lg.png" class="btn">View Design</a>
@@ -169,13 +254,13 @@
                             <img src="img/twtr-app-th.jpg" alt="">
                         </figure>
                         <div class="panel">
-                            <h3 class="brand">Tuts+</h3>
+                            <h3 class="brand">Android App Interface</h3>
                             <div class="info">
-                                <h4>My Role</h4>
+                                <h4>What I Did</h4>
                                 <p>User Interface Tutorial</p>
 
-                                <h4>Industry</h4>
-                                <p>Education</p>
+                                <h4>Things I Used</h4>
+                                <p>Photoshop</p>
                             </div>
                             <div class="btns">
                                 <a href="img/twtr-app.jpg" class="btn">View Design</a>
@@ -192,7 +277,7 @@
                 <h2 class="section-title">About me</h2>
                 <ul class="grid">
                     <li class="icon-cycle">In-sync with our industries best practices, technologies, and trends.</li>
-                    <li class="icon-code">Over 10 years experience with HTML, CSS, and JavaScript.</li>
+                    <li class="icon-code">Over 15 years experience with HTML, CSS, and JavaScript.</li>
                     <li class="icon-ok">Proven track-record for shipping rock-solid, high quality experiences.</li>
                     <li class="icon-smile">Excited by design and technology and the roles they play in communication.</li>
                     <li class="icon-superscript">Adept at finding solutions. From concept to code, an original and practical thinker.</li>
@@ -201,15 +286,14 @@
             </div>
         </section>
 
-        <footer id="site-footer">
+        <footer id="footer">
             <div class="content">
-                <p>Cameron Skene is brought to you by the letter C and the number 5!</p>
+                <p>camskene@gmail.com</p>
             </div>
         </footer>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="dist/scripts/main.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
