reference unminified css file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>UI Design &amp; Development - Cam Skene</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="I’m passionate about design and technology and the roles they play in communication. I have over 15 years of design and development experience and love working with people who 'get' good design and the difference it makes to the success of a product. I love learning new skills and I’m always up for a challenge. I like to be up to date with our industries best practices, technologies, and trends.">
-    <link rel="stylesheet" href="dist/styles/main.min.css">
+    <link rel="stylesheet" href="dist/styles/main.css">
 </head>
 <body>
     <div id="container">
