update grunt build task, update image paths

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>UI Design &amp; Development - Cam Skene</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="I’m passionate about design and technology and the roles they play in communication. I have over 15 years of design and development experience and love working with people who 'get' good design and the difference it makes to the success of a product. I love learning new skills and I’m always up for a challenge. I like to be up to date with our industries best practices, technologies, and trends.">
-  <link rel="stylesheet" href="dist/styles/main.css">
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <ul class="work-list">
           <li>
             <figure>
-              <img src="img/shuddle-th.jpg" alt="">
+              <img src="images/shuddle-th.jpg" alt="">
             </figure>
             <div class="panel">
               <h3 class="brand">Shuddle Inc.</h3>
@@ -46,7 +46,7 @@
           </li>
           <li>
             <figure>
-              <img src="img/about-th.jpg" alt="">
+              <img src="images/about-th.jpg" alt="">
             </figure>
             <div class="panel">
               <h3 class="brand">About</h3>
@@ -63,7 +63,7 @@
           </li>
           <li>
             <figure>
-              <img src="img/staybay-th.jpg" alt="">
+              <img src="images/staybay-th.jpg" alt="">
             </figure>
             <div class="panel">
               <h3 class="brand">StayBay</h3>
@@ -80,7 +80,7 @@
           </li>
           <li>
             <figure>
-              <img src="img/speedlist-th.jpg" alt="">
+              <img src="images/speedlist-th.jpg" alt="">
             </figure>
             <div class="panel">
               <h3 class="brand">Speedlist</h3>
@@ -97,7 +97,7 @@
           </li>
           <li>
             <figure>
-              <img src="img/yahoo-weather-th.jpg" alt="">
+              <img src="images/yahoo-weather-th.jpg" alt="">
             </figure>
             <div class="panel">
               <h3 class="brand">Yahoo!</h3>
@@ -108,13 +108,13 @@
                 <p>Photoshop, Illustrator</p>
               </div>
               <div class="btns">
-                <a href="img/yahoo-weather.jpg" class="btn">View Design</a>
+                <a href="images/yahoo-weather.jpg" class="btn">View Design</a>
               </div>
             </div>
           </li>
           <li>
             <figure>
-              <img src="img/workhorse-th.jpg" alt="">
+              <img src="images/workhorse-th.jpg" alt="">
             </figure>
             <div class="panel">
               <h3 class="brand">Workhorse</h3>
@@ -131,7 +131,7 @@
           </li>
           <li>
             <figure>
-              <img src="img/tnp-home-th.jpg" alt="">
+              <img src="images/tnp-home-th.jpg" alt="">
             </figure>
             <div class="panel">
               <h3 class="brand">The New Potato (TNP)</h3>
@@ -142,13 +142,13 @@
                 <p>HTML, CSS, JS, PHP, WordPress</p>
               </div>
               <div class="btns">
-                <a href="img/tnp-home.jpg" class="btn">View Design</a>
+                <a href="images/tnp-home.jpg" class="btn">View Design</a>
               </div>
             </div>
           </li>
           <li>
             <figure>
-              <img src="img/silverseacruises-home-th.jpg" alt="">
+              <img src="images/silverseacruises-home-th.jpg" alt="">
             </figure>
             <div class="panel">
               <h3 class="brand">Cruise Norway</h3>
@@ -159,13 +159,13 @@
                 <p>Photoshop, Illustrator</p>
               </div>
               <div class="btns">
-                <a href="img/silverseacruises-destinations.jpg" class="btn">View Design</a>
+                <a href="images/silverseacruises-destinations.jpg" class="btn">View Design</a>
               </div>
             </div>
           </li>
           <li>
             <figure>
-              <img src="img/ghostlight-home-th.jpg" alt="">
+              <img src="images/ghostlight-home-th.jpg" alt="">
             </figure>
             <div class="panel">
               <h3 class="brand">Ghostlight Records</h3>
@@ -176,13 +176,13 @@
                 <p>Pencil, Photoshop</p>
               </div>
               <div class="btns">
-                <a href="img/ghostlight-home.jpg" class="btn">View Design</a>
+                <a href="images/ghostlight-home.jpg" class="btn">View Design</a>
               </div>
             </div>
           </li>
           <li>
             <figure>
-              <img src="img/pippin-home-th.jpg" alt="">
+              <img src="images/pippin-home-th.jpg" alt="">
             </figure>
             <div class="panel">
               <h3 class="brand">Pippin the Musical</h3>
@@ -193,13 +193,13 @@
                 <p>HTML, CSS, JS, PHP, Git</p>
               </div>
               <div class="btns">
-                <a href="img/pippin-home.jpg" class="btn">View Design</a>
+                <a href="images/pippin-home.jpg" class="btn">View Design</a>
               </div>
             </div>
           </li>
           <!-- <li>
                         <figure>
-                            <img src="img/kings-speech-home-th.jpg" alt="">
+                            <img src="images/kings-speech-home-th.jpg" alt="">
                         </figure>
                         <div class="panel">
                             <h3 class="brand">The Kings Speech</h3>
@@ -211,13 +211,13 @@
                                 <p>Photoshop</p>
                             </div>
                             <div class="btns">
-                                <a href="img/kings-speech-home.jpg" class="btn">View Design</a>
+                                <a href="images/kings-speech-home.jpg" class="btn">View Design</a>
                             </div>
                         </div>
                     </li> -->
           <li>
             <figure>
-              <img src="img/amp-th.jpg" alt="">
+              <img src="images/amp-th.jpg" alt="">
             </figure>
             <div class="panel">
               <h3 class="brand">Stereo Amplifier</h3>
@@ -228,13 +228,13 @@
                 <p>Photoshop</p>
               </div>
               <div class="btns">
-                <a href="img/amp-lg.png" class="btn">View Design</a>
+                <a href="images/amp-lg.png" class="btn">View Design</a>
               </div>
             </div>
           </li>
           <li>
             <figure>
-              <img src="img/twtr-app-th.jpg" alt="">
+              <img src="images/twtr-app-th.jpg" alt="">
             </figure>
             <div class="panel">
               <h3 class="brand">Android App Interface</h3>
@@ -245,7 +245,7 @@
                 <p>Photoshop</p>
               </div>
               <div class="btns">
-                <a href="img/twtr-app.jpg" class="btn">View Design</a>
+                <a href="images/twtr-app.jpg" class="btn">View Design</a>
               </div>
             </div>
           </li>
@@ -273,7 +273,7 @@
     </footer>
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script src="dist/scripts/main.min.js"></script>
+  <script src="scripts/main.min.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
